--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
       </div>
     </div>
 
+
     <div class="row">
       <div class="column mp-typography--text__center">
           <a class="button" href="#">Join a game</a>
@@ -38,7 +39,7 @@
     </div>
   </div>
 
-  <script src="file://multipong.css"></script>
+  <script src="https://unpkg.com/vue"></script>
 </body>
 
 </html>
